--- a/index.html
+++ b/index.html
@@ -5,32 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Music Player</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="music-player">
-        <div class="player-header">
-            <h1>My Music Player</h1>
+    <div class="container">
+        <div class="music-player">
+            <div class="player-header">
+                <h1>My Music Player</h1>
+            </div>
+            <div class="player-controls">
+                <div class="track-info">
+                    <span id="track-name">Track Name</span>
+                    <span id="artist-name">Artist Name</span>
+                </div>
+                <div class="controls">
+                    <button id="prev-btn"><i class="fa-solid fa-backward"></i></button>
+                    <button id="play-pause-btn">Play</button>
+                    <button id="next-btn"><i class="fa-solid fa-forward"></i></button>
+                    <div class="volume-control">
+                        <label for="volume">Volume:</label>
+                        <input type="range" id="volume" value="100" max="100">
+                    </div>
+                </div>
+                <div class="progress-bar">
+                    <input type="range" id="progress" value="0" max="100">
+                    <span id="current-time">0:00</span> / <span id="duration">0:00</span>
+                </div>
+               
+            </div>
         </div>
-        <div class="player-controls">
-            <div class="track-info">
-                <span id="track-name">Track Name</span>
-                <span id="artist-name">Artist Name</span>
-            </div>
-            <div class="controls">
-                <button id="prev-btn">Prev</button>
-                <button id="play-pause-btn">Play</button>
-                <button id="next-btn">Next</button>
-            </div>
-            <div class="progress-bar">
-                <input type="range" id="progress" value="0" max="100">
-                <span id="current-time">0:00</span> / <span id="duration">0:00</span>
-            </div>
-            <div class="volume-control">
-                <label for="volume">Volume:</label>
-                <input type="range" id="volume" value="100" max="100">
-            </div>
+        <div class="playlist">
+            <h2>Playlist</h2>
+            <ul id="playlist">
+                <!-- Playlist items will be inserted here -->'
+                <audio id="audio" src="song/Fire.mp3"></audio>
+                <audio id="audio" src="song/Dekha_Tenu.mp3"></audio>
+                <audio id="audio" src="song/O_Sajni_Re.mp3"></audio>'
+            </ul>
         </div>
-        <audio id="audio" src="song/Fire.mp3"></audio>
     </div>
     <script src="scripts.js"></script>
 </body>
