add more songs to testing

--- a/index.html
+++ b/index.html
@@ -37,10 +37,15 @@
         <div class="playlist">
             <h2>Playlist</h2>
             <ul id="playlist">
-                <!-- Playlist items will be inserted here -->'
-                <audio id="audio" src="song/Fire.mp3"></audio>
+                <!-- Playlist items will be inserted here -->
+                <!-- <audio id="audio" src="song/Fire.mp3"></audio>
                 <audio id="audio" src="song/Dekha_Tenu.mp3"></audio>
-                <audio id="audio" src="song/O_Sajni_Re.mp3"></audio>'
+                <audio id="audio" src="song/O_Sajni_Re.mp3"></audio> -->
+                <audio id="audio" src="song/Criminal.mp3"></audio>
+                <audio id="audio" src="song/Envy.mp3"></audio>
+                <audio id="audio" src="song/Gulabi_Sadi.mp3"></audio>
+                <audio id="audio" src="song/Inni_Soni.mp3"></audio>
+                <audio id="audio" src="song/Tujhe_Dekha.mp3"></audio>
             </ul>
         </div>
     </div>
