new songs bug fixed

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <h2>Playlist</h2>
             <ul id="playlist">
                 <!-- Playlist items will be inserted here -->
-                <!-- <audio id="audio" src="song/Fire.mp3"></audio>
+                <audio id="audio" src="song/Fire.mp3"></audio>
                 <audio id="audio" src="song/Dekha_Tenu.mp3"></audio>
-                <audio id="audio" src="song/O_Sajni_Re.mp3"></audio> -->
+                <audio id="audio" src="song/O_Sajni_Re.mp3"></audio>
                 <audio id="audio" src="song/Criminal.mp3"></audio>
                 <audio id="audio" src="song/Envy.mp3"></audio>
                 <audio id="audio" src="song/Gulabi_Sadi.mp3"></audio>
